# pixi-inject

./: Cargo.toml  LICENSE  README.md  SECURITY.md  pixi.toml
.github/workflows/: build.yml  chore.yml  ci.yml
examples/already-installed/: pixi.toml
examples/already-installed-different-version/: pixi.toml
examples/simple-example/: pixi.toml  win-64-pydantic-core-2.26.0-py313hf3b5b86_0.conda
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/resources/already-installed/: pixi.toml
tests/resources/simple-example/: pixi.toml
