[package]
name = "pixi-inject"
description = "Inject conda packages into an already existing conda prefix"
version = "0.1.1"
edition = "2024"

[features]
default = ["native-tls"]
native-tls = [
  "reqwest/native-tls",
  "reqwest/native-tls-alpn",
  "rattler/native-tls",
  "rattler_networking/rustls-tls",
  "rattler_package_streaming/rustls-tls",
]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-native-roots",
  "rattler/rustls-tls",
  "rattler_networking/rustls-tls",
  "rattler_package_streaming/rustls-tls",
]

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "default",
  "env-filter",
] }
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive", "string"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
futures = "0.3.31"
indicatif = "0.18.3"
rattler = { version = "0.39.5", default-features = false }
rattler_digest = "1.2.0"
rattler_conda_types = "0.42.2"
rattler_index = "0.27.6"
rattler_lock = "0.26.7"
rattler_networking = { version = "0.25.27", default-features = false }
rattler_package_streaming = { version = "0.23.19", default-features = false }
rattler_shell = "0.25.13"
reqwest = { version = "0.12.28", default-features = false, features = [
  "http2",
  "macos-system-configuration",
] }
tempfile = "3.24.0"

[dev-dependencies]
rstest = "0.26.1"
